# wafrunner-cli

./: .ai-assistant-protocol.md  .cursor-conflict-resolution-guide.md  .flake8  .gitignore  .pre-commit-config.yaml  404.html  DEPLOYMENT_RECOMMENDATIONS.md  HARDCODED_PATHS_ANALYSIS.md  Makefile  README.md  coverage.xml  fails.txt  flake8-output  index.html  missing_tests.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  wget-log
.gemini/: styleguide.md
.venv-wafrunner/: pyvenv.cfg
docs/: index.md  reference.md  testing-guide.md
reference/: index.html
run_logs/: classifier_trigger_log_Standard_20250628-170716.json  classifier_trigger_log_Standard_20250629-132606.json  classifier_trigger_log_Standard_20250629-133926.json  classifier_trigger_log_Standard_20250629-134001.json  classifier_trigger_log_Standard_20250629-154135.json  classifier_trigger_log_Standard_20250629-154242.json  classifier_trigger_log_Standard_20250629-171020.json  classifier_trigger_log_Standard_20250629-171248.json  classifier_trigger_log_Standard_20250629-171752.json  classifier_trigger_log_Standard_20250630-161328.json  classifier_trigger_log_Standard_20250630-161607.json  classifier_trigger_log_Standard_20250630-191435.json  classifier_trigger_log_Standard_20250630-193532.json  classifier_trigger_log_Standard_20250630-204726.json  classifier_trigger_log_Standard_20250630-205014.json  classifier_trigger_log_Standard_20250630-205044.json  classifier_trigger_log_Standard_20250630-205158.json  classifier_trigger_log_Standard_20250630-205410.json  (+30 more)
(+52 files in other folders)
